2009-11-18  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (mx_inline_any_negative, mx_inline_pow): New loops.
	(DEFMXMAPPER2X): New macro.
	* bsxfun-decl.h (BSXFUN_OP2_DECL): New macro.
	* bsxfun-defs.cc (BSXFUN_OP2_DEF, BSXFUN_OP2_DEF_MXLOOP): New macros.
	(do_bsxfun_op): Use OCTAVE_QUIT.
	* dNDArray.cc (NDArray::all_integers (void)): New method.
	(NDArray::any_element_is_negative): Use mx_inline_any_negative.
	(bsxfun_pow (const NDArray&, const NDArray&),
	bsxfun_pow (const ComplexNDArray&, const NDArray&)): New functions.
	* dNDArray.h: Update.
	* fNDArray.cc (FloatNDArray::all_integers (void)): New method.
	(FloatNDArray::any_element_is_negative): Use mx_inline_any_negative.
	(bsxfun_pow (const FloatNDArray&, const FloatNDArray&),
	bsxfun_pow (const FloatComplexNDArray&, const FloatNDArray&)): New functions.
	* fNDArray.h: Update.
	* CNDArray.cc (bsxfun_pow (const ComplexNDArray&, const
	ComplexNDArray&)): New function.
	* CNDArray.h: Update.
	* fCNDArray.cc (bsxfun_pow (const FloatComplexNDArray&, const
	FloatComplexNDArray&)): New function.
	* fCNDArray.h: Update.

2009-11-13  Jaroslav Hajek  <highegg@gmail.com>

	* CNDArray.cc (ComplexNDArray::all_elements_are_real): 
	Use mx_inline_all_real.
	* CMatrix.cc (ComplexMatrix::all_elements_are_real): Ditto.
	* fCNDArray.cc (FloatComplexNDArray::all_elements_are_real): 
	Use mx_inline_all_real.
	* fCMatrix.cc (FloatComplexMatrix::all_elements_are_real): Ditto.
	* CDiagMatrix.cc (ComplexDiagMatrix::all_elements_are_real): Ditto.
	* fCDiagMatrix.cc (FloatComplexDiagMatrix::all_elements_are_real): Ditto.
	* CSparse.cc (SparseComplexMatrix::all_elements_are_real): Ditto.

2009-11-17  Jaroslav Hajek  <highegg@gmail.com>

	* base-aepbal.h (permuting_vector): Fix lower part swapping.

2009-11-13  John W. Eaton  <jwe@octave.org>

	* Makefile.am (liboctave_la_CPPFLAGS): Add @OCTAVE_DLL_DEFS@ to
	the list of flags.

2009-11-13  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (mx_inline_any_nan): Rewrite.